@@ -1,3 +1,8 @@
+Tue Feb 23 01:42:40 1999  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>
+
+	* setup/ask_basic.pl (ask_basic, ask_qmail, ask_domain): More
+ 	qmail support tweaks.
+
 Mon Feb 22 01:04:48 1999  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>
 
 	* lib/Mj/Digest/Index.pm (done): Fix $args problem: copy in args
